Fix the left edge of switches being cut off

--- a/scss/components/_switch.scss
+++ b/scss/components/_switch.scss
@@ -46,6 +46,10 @@ $switch-paddle-offset: 4px !default;
       left: 0;
     }
   }
+
+  input + label {
+    margin-left: 0;
+  }
 }
 
 /*
